--- a/app/haml/shared/_footer.haml
+++ b/app/haml/shared/_footer.haml
@@ -54,84 +54,86 @@
   %span.mmenu-open__tick.mmenu-open__tick_s
   %span.mmenu-open__tick.mmenu-open__tick_t
 
-.b-design-option
-  .b-design-option__title Управление дизайном
-  .b-design-option__close Закрыть
-  .b-design-option__body
-    .b-design-option__item
-      .b-design-option__item__current-params
-        %span.b-design-option__item__name цвет страницы
-        .b-design-option__item__val
-          .b-design-option__color{style: 'background-color: white'}
-      .b-design-option__item__available-params
-        %div{data-react-class: 'ColorList', data-react-props: '{"name": "page-color", "colorSet": {"bg-dark": "#000", "bg-light": "#fff"}}'}
+%div{data-react-class: 'DesingController'}
 
-    .b-design-option__item
-      .b-design-option__item__current-params
-        %span.b-design-option__item__name фон страницы
-        .b-design-option__item__val
-          .b-design-option__color.b-design-option__color_img
-            %img{src: 'http://cs9514.vk.me/v9514976/2b7d/dV_vHdU34H8.jpg', alt:''}
-      .b-design-option__item__available-params
-        %div{data-react-class: 'BgList', data-react-props: '{"name": "bg-pic"}'}
+/ .b-design-option
+/   .b-design-option__title Управление дизайном
+/   .b-design-option__close Закрыть
+/   .b-design-option__body
+/     .b-design-option__item
+/       .b-design-option__item__current-params
+/         %span.b-design-option__item__name цвет страницы
+/         .b-design-option__item__val
+/           .b-design-option__color{style: 'background-color: white'}
+/       .b-design-option__item__available-params
+/         %div{data-react-class: 'ColorList', data-react-props: '{"name": "page-color", "colorSet": {"bg-dark": "#000", "bg-light": "#fff"}}'}
 
-    .b-design-option__item
-      .b-design-option__item__current-params
-        %span.b-design-option__item__name цвет ленты
-        .b-design-option__item__val
-          .b-design-option__color{style: 'background-color: green'}
-      .b-design-option__item__available-params
-        %div{data-react-class: 'ColorList', data-react-props: '{"name": "layout-color","colorSet": {"bg-dark": "#000", "bg-light": "#fff"}}'}
+/     .b-design-option__item
+/       .b-design-option__item__current-params
+/         %span.b-design-option__item__name фон страницы
+/         .b-design-option__item__val
+/           .b-design-option__color.b-design-option__color_img
+/             %img{src: 'http://cs9514.vk.me/v9514976/2b7d/dV_vHdU34H8.jpg', alt:''}
+/       .b-design-option__item__available-params
+/         %div{data-react-class: 'BgList', data-react-props: '{"name": "bg-pic"}'}
+
+/     .b-design-option__item
+/       .b-design-option__item__current-params
+/         %span.b-design-option__item__name цвет ленты
+/         .b-design-option__item__val
+/           .b-design-option__color{style: 'background-color: green'}
+/       .b-design-option__item__available-params
+/         %div{data-react-class: 'ColorList', data-react-props: '{"name": "layout-color","colorSet": {"bg-dark": "#000", "bg-light": "#fff"}}'}
         
-    .b-design-option__item
-      %span.b-design-option__item__name прозрачность ленты
-      .b-design-option__item__val
-        %div{data-react-class: 'ValueSlider'}
+/     .b-design-option__item
+/       %span.b-design-option__item__name прозрачность ленты
+/       .b-design-option__item__val
+/         %div{data-react-class: 'ValueSlider'}
 
-    .b-design-option__item
-      .b-design-option__item__current-params
-        %span.b-design-option__item__name цвет текста
-        .b-design-option__item__val
-          .b-design-option__color{style: 'background-color: black'}
-      .b-design-option__item__available-params
-        %div{data-react-class: 'ColorList', data-react-props: '{"name": "text-color","colorSet": {"text-dark": "#000", "text-light": "#fff"}}'}
+/     .b-design-option__item
+/       .b-design-option__item__current-params
+/         %span.b-design-option__item__name цвет текста
+/         .b-design-option__item__val
+/           .b-design-option__color{style: 'background-color: black'}
+/       .b-design-option__item__available-params
+/         %div{data-react-class: 'ColorList', data-react-props: '{"name": "text-color","colorSet": {"text-dark": "#000", "text-light": "#fff"}}'}
 
-    .b-design-option__item
-      .b-design-option__item__current-params
-        %span.b-design-option__item__name цвет активных элементов
-        .b-design-option__item__val
-          .b-design-option__color{style: 'background-color: purple'}
-      .b-design-option__item__available-params
-        %div{data-react-class: 'ColorList', data-react-props: '{"name": "active-color","colorSet": {"active-dark": "#000", "active-light": "#fff"}}'}
+/     .b-design-option__item
+/       .b-design-option__item__current-params
+/         %span.b-design-option__item__name цвет активных элементов
+/         .b-design-option__item__val
+/           .b-design-option__color{style: 'background-color: purple'}
+/       .b-design-option__item__available-params
+/         %div{data-react-class: 'ColorList', data-react-props: '{"name": "active-color","colorSet": {"active-dark": "#000", "active-light": "#fff"}}'}
 
-    .b-design-option__item
-      %span.b-design-option__item__name шрифт
-      .b-design-option__item__val
-        %div{data-react-class: 'FontList'}
+/     .b-design-option__item
+/       %span.b-design-option__item__name шрифт
+/       .b-design-option__item__val
+/         %div{data-react-class: 'FontList'}
 
-    .b-design-option__item
-      %span.b-design-option__item__name размер шрифта
-      .b-design-option__item__val
-        %div{data-react-class: 'ValueSlider', data-react-props: '{"step": 1, "range":{"min": 13, "max": 15}}'}
+/     .b-design-option__item
+/       %span.b-design-option__item__name размер шрифта
+/       .b-design-option__item__val
+/         %div{data-react-class: 'ValueSlider', data-react-props: '{"step": 1, "range":{"min": 13, "max": 15}}'}
 
-    .b-design-option__item
-      %span.b-design-option__item__name лейаут товара
-      .b-design-option__item__val
-        %div{data-react-class: 'LayoutList'}
+/     .b-design-option__item
+/       %span.b-design-option__item__name лейаут товара
+/       .b-design-option__item__val
+/         %div{data-react-class: 'LayoutList'}
 
-    .b-design-option__item
-      %span.b-design-option__item__name каталог
-      .b-design-option__item__val
-        %div{data-react-class: 'Toggle', data-react-props: '{"name": "фильтр", "value": true}'}
+/     .b-design-option__item
+/       %span.b-design-option__item__name каталог
+/       .b-design-option__item__val
+/         %div{data-react-class: 'Toggle', data-react-props: '{"name": "фильтр", "value": true}'}
 
-    .b-design-option__item
-      %span.b-design-option__item__name товаров в ряд
-      .b-design-option__item__val
-        %div{data-react-class: 'ValueSlider', data-react-props: '{"step": 1, "value": 3, "range":{"min": 2, "max": 4}}'}
+/     .b-design-option__item
+/       %span.b-design-option__item__name товаров в ряд
+/       .b-design-option__item__val
+/         %div{data-react-class: 'ValueSlider', data-react-props: '{"step": 1, "value": 3, "range":{"min": 2, "max": 4}}'}
 
-    .b-design-option__item
-      %span.b-design-option__item__name главная страница
-      .b-design-option__item__val
-        %div{data-react-class: 'Toggle', data-react-props: '{"name": "большой баннер", "value": true}'}
+/     .b-design-option__item
+/       %span.b-design-option__item__name главная страница
+/       .b-design-option__item__val
+/         %div{data-react-class: 'Toggle', data-react-props: '{"name": "большой баннер", "value": true}'}
 
-    %button.b-design-option__save Сохранить
+/     %button.b-design-option__save Сохранить
