Catalog filter enhancements [deliver #88226642]

--- a/app/stylesheets/sass/block/b-full-filter.sass
+++ b/app/stylesheets/sass/block/b-full-filter.sass
@@ -26,8 +26,8 @@
   &__slider
     padding: 5px 0 0
     &__value
-        span
-          color: #bebebe
+      span.slider-divider
+        color: #bebebe
     &__embed
       margin: 17px 0 44px
       padding: 0 2px
