Заменил fancybox на photoswipe

--- a/app/stylesheets/sass/bundle.scss
+++ b/app/stylesheets/sass/bundle.scss
@@ -53,6 +53,11 @@
 @import "OwlCarousel/owl-carousel/scss/theme";
 @import "OwlCarousel/owl-carousel/scss/transitions";
 
+// Photoswipe
+@import "photoswipe/src/css/main-settings";
+@import "photoswipe/src/css/main";
+@import "photoswipe/src/css/default-skin/default-skin";
+
 
 // =====================================================================
 // Vendors
