--- a/app/stylesheets/sass/global/_variables.sass
+++ b/app/stylesheets/sass/global/_variables.sass
@@ -43,3 +43,6 @@ $ccLink: #303030
 $ccLinkHover: #ef5a61
 $ccBar: #242427
 $ccBarText: #7d7d7d
+
+// Photoswipe
+$pswp__assets-path: '#{$images-path}/'
