--- a/app/haml/shared/_product-carousel.haml
+++ b/app/haml/shared/_product-carousel.haml
@@ -1,9 +1,9 @@
 .b-slider#product-slider
   - for i in [1..8]
-    %a.b-slider__item{lightbox: true, href: 'http://citycycle.ru/upload/product_images/13976/ac433b32eeb1e39147083a6d0c6cbfe9_0x0.jpg', rel: 'photo-stack'}
-      %img{src: 'http://citycycle.ru/upload/product_images/13976/ac433b32eeb1e39147083a6d0c6cbfe9_0x0.jpg', alt: ''}
+    %a.b-slider__item{href: 'http://assets.kiiiosk.ru/uploads/product_image/image/5267/image.png', data: {size: '1500x1500'}, ks-pswp-gallery-item: true}
+      %img{src: 'http://thumbor.kiiiosk.ru/unsafe/486x0/http://assets.kiiiosk.ru/uploads/product_image/image/5267/image.png', alt: ''}
 
 .b-slider.b-slider_thumbs#product-thumbs
   - for i in [1..8]
-    %a.b-slider__item{lightbox: true, href: 'http://citycycle.ru/upload/product_images/13976/ac433b32eeb1e39147083a6d0c6cbfe9_0x0.jpg', rel: 'photo-stack'}
-      %img{src: 'http://citycycle.ru/upload/product_images/13976/ac433b32eeb1e39147083a6d0c6cbfe9_0x0.jpg', alt: ''}
+    %a.b-slider__item{href: 'http://assets.kiiiosk.ru/uploads/product_image/image/5267/image.png'}
+      %img{src: 'http://thumbor.kiiiosk.ru/unsafe/486x0/http://assets.kiiiosk.ru/uploads/product_image/image/5267/image.png', alt: ''}
