--- a/app/haml/react/product.haml
+++ b/app/haml/react/product.haml
@@ -49,7 +49,7 @@
                     Цена неизвестна
 
               .b-item-full__form
-                %div{data: {react-class: 'PropertyList', react-props: '{"property": {"title": "Цвет", "value": 456}}'}}
+                / %div{data: {react-class: 'PropertyList', react-props: '{"property": {"title": "Цвет", "value": 456}}'}}
                 %div{data: {react-class: 'ProductProperties', react-props: ''}}
 
               .b-item-full__text
