--- a/app/stylesheets/sass/partials/b-btn.sass
+++ b/app/stylesheets/sass/partials/b-btn.sass
@@ -1,4 +1,5 @@
 $btnBgColor: #000
+$btnDisabledBgColor: #cbcbcb
 $btnColor: #fff
 
 $btnBgColorHover: #cbcbcb
@@ -20,6 +21,9 @@ $btnBgColorHover: #cbcbcb
     background: none
     color: $btnBgColor
     border: 1px solid $btnBgColorHover
+
+  &[disabled]
+    background: $btnDisabledBgColor
 
 .b-btn_sm
   padding: 6px 17px 7px
