--- a/app/stylesheets/sass/bundle.scss
+++ b/app/stylesheets/sass/bundle.scss
@@ -130,6 +130,7 @@
 @import "partials/top-banner"; // Верхний информер-баннер
 @import "partials/posts"; // Посты
 @import "partials/postnav"; // Навигация между страницами (на странице поста)
+@import "partials/b-product-properties"; // Форма выбора характеристик в карточке
 
 // Global layout blocks
 @import "partials/b-page"; // Основная страница
