checkout payment types

--- a/app/stylesheets/sass/partials/b-cart.sass
+++ b/app/stylesheets/sass/partials/b-cart.sass
@@ -283,7 +283,10 @@
     &__delivery-price
       width: 30%
       text-align: right
-
+    &__payment
+      &-payment_types
+        .b-item-full__form__option
+          padding-left: 0
     .b-cart__action
       margin: 0
       padding: 0
