cart price animations

--- a/app/stylesheets/sass/partials/b-cart.sass
+++ b/app/stylesheets/sass/partials/b-cart.sass
@@ -37,6 +37,9 @@
     @include grid-media-query(palm)
       text-align: center
 
+  &__total-sum-price
+    display: inline-block
+
   &__action
     padding-bottom: 40px
     &__container
@@ -152,6 +155,7 @@
       margin-top: 3px
 
     &__price
+      display: inline-block
       font-size: 1.25em
       margin-top: -5px
 
