react blog post

--- a/app/haml/react/index.haml
+++ b/app/haml/react/index.haml
@@ -32,12 +32,12 @@
                 = page
     .navbar-transparent
       .container
-        %h1.text-center ReactCategories
+        %h1.text-center ReactKserx
     .login__content.login__content--fullscreen
       .login__block
         -#.alert.alert-danger
         .login__form
-          - pages = ['error_page.html']
+          - pages = ['error_page.html', 'blog_post.html']
           - for page of pages
             - page = pages[page]
             %h3
