--- a/app/haml/react/blog_post.haml
+++ b/app/haml/react/blog_post.haml
@@ -3,7 +3,7 @@
   %head
     +include 'app/haml/shared/_head.haml'
   %body.b-page.b-page_cols-4
-    %div{data: {'react-class':"BlogPost", react-props:'{"date": "2015-09-11 07:41:33 +0300", "title":"simple", "text":"simple", "prev":"/123", "next":"123"}'}
+    %div{data: {'react-class':"BlogPost", react-props:'{"date": "2015-09-11 07:41:33 +0300", "title":"simple", "text":"simple", "prev": {"url":"/example.html","title":"hello"}, "next": {"url":"/example.html","title":"hello"} }'}
 
     %script{src: '../scripts/vendor.js'}
     %script{src: '../scripts/client.js'}
