--- a/app/haml/react/index.haml
+++ b/app/haml/react/index.haml
@@ -10,7 +10,7 @@
       .login__block
         -#.alert.alert-danger
         .login__form
-          - pages = ['catalog.html', 'product-list.html', 'product-group.html', 'children-products.html', 'menu-top-1.html', 'menu-top-2.html', 'menu-top-sticky.html', 'product.html', 'product-doesnt-sell.html', 'product-weight.html', 'product-no-goods.html', 'product-multi-select.html', 'product-archived.html', 'cart-empty.html', 'cart-select-package.html', 'cart-with-package.html', 'checkout.html', 'checkout-no-coupon.html', 'wishlist.html', 'categories-sample.html', 'categories-empty.html', 'categories-filter-dirty.html', 'categories-show-children.html', 'categories-show-children-empty.html', 'dictionary-entities.html', 'dictionary-entities-empty.html']
+          - pages = ['catalog.html', 'product-list.html', 'product-group.html', 'children-products.html', 'menu-top-1.html', 'menu-top-2.html', 'menu-top-sticky.html', 'product.html', 'product-doesnt-sell.html', 'product-weight.html', 'product-no-goods.html', 'product-multi-select.html', 'product-archived.html', 'product-search-sample.html', 'product-search-empty.html', 'cart-empty.html', 'cart-select-package.html', 'cart-with-package.html', 'checkout.html', 'checkout-no-coupon.html', 'wishlist.html', 'categories-sample.html', 'categories-empty.html', 'categories-filter-dirty.html', 'categories-show-children.html', 'categories-show-children-empty.html', 'dictionary-entities.html', 'dictionary-entities-empty.html']
           - for page of pages
             - page = pages[page]
             %h3
