react cabinet (in progress)

--- a/app/haml/react/index.haml
+++ b/app/haml/react/index.haml
@@ -37,7 +37,7 @@
       .login__block
         -#.alert.alert-danger
         .login__form
-          - pages = ['error_page.html', 'blog_post.html' , 'lookbook.html', 'blog-post-list.html', 'dictionary.html', 'content_page.html','payment.html']
+          - pages = ['error_page.html', 'blog_post.html' , 'lookbook.html', 'blog-post-list.html', 'dictionary.html', 'content_page.html','payment.html', 'cabinet.html']
           - for page of pages
             - page = pages[page]
             %h3
